@@ -63,6 +63,7 @@ ConfigLoader.prototype.defaults = function(config) {
   if (config.daemonize && !config.stdout_path) { config.stdout_path = "/dev/null"; }
   if (config.daemonize && !config.pidfile) { config.pidfile = "/tmp/tiamat-" + process.pid + ".pid"; }
   if (!config.timeout) { config.timeout = 45; }
+  if (!config.loglevel) { config.loglevel = 'info'; }
 
   config.timeout *= 1000;
 
