@@ -16,39 +16,48 @@ if (!Array.prototype.remove) {
   };
 }
 
+LOGLEVELS = {'debug': 0, 'info': 1, 'error': 2};
 KILLSIGS = ["SIGINT","SIGTERM"];
 
-// logger usage:
-// log('info', "[%s] M(%d): ", "my message %s", msg);
-
-function logv(format, args) {
-  var args = [].slice.call(arguments);
-  console.log.apply(console, args[0]);
-}
-
-// logm('info', "my message %s", v);
-function logm() {
-  var args = [].slice.call(arguments);
-  var level = args.shift();
-  var msg = args.shift();
-  args.unshift(posix.getpid());
-  args.unshift(level);
-  args.unshift("[%s] m(%d): " + msg);
-  logv(args);
-}
-
-// logw('info', "my message %s", v);
-function logw() {
-  var args = [].slice.call(arguments);
-  var level = args.shift();
-  var msg = args.shift();
-  args.unshift(posix.getpid());
-  args.unshift(level);
-  args.unshift("\t[%s] w(%d): " + msg);
-  logv(args);
-}
-
 function launchServer(config) {
+
+  function logFor(level) {
+    return LOGLEVELS[level] >= LOGLEVELS[config.loglevel];
+  }
+
+  // logger usage:
+  // log('info', "[%s] M(%d): ", "my message %s", msg);
+  function logv(format, args) {
+    var args = [].slice.call(arguments);
+    console.log.apply(console, args[0]);
+  }
+
+  // logm('info', "my message %s", v);
+  function logm() {
+    var args = [].slice.call(arguments);
+    var level = args.shift();
+    if (logFor(level)) {
+      var msg = args.shift();
+      args.unshift(posix.getpid());
+      args.unshift(level);
+      args.unshift("[%s] m(%d): " + msg);
+      logv(args);
+    }
+  }
+
+  // logw('info', "my message %s", v);
+  function logw() {
+    var args = [].slice.call(arguments);
+    var level = args.shift();
+    if (logFor(level)) {
+      var msg = args.shift();
+      args.unshift(posix.getpid());
+      args.unshift(level);
+      args.unshift("\t[%s] w(%d): " + msg);
+      logv(args);
+    }
+  }
+
 
   var pidfile = config.pidfile;
   var workers = [];
@@ -89,7 +98,7 @@ function launchServer(config) {
 
   function killWorker(pid, sig) {
     //console.log("send(%d): %d, %s", posix.getpid(), pid, sig);
-    try { process.kill(pid, sig); } catch(e) { console.error(e); }
+    try { process.kill(pid, sig); } catch(e) { console.error("killWorker: %d, %s", pid, sig); console.error(e); }
   }
 
   function signalWorkers(sig) {
@@ -128,10 +137,10 @@ function launchServer(config) {
     //signalWorkers('SIGQUIT'); // send them the quit signal and master will later reboot them
   }
 
-  function workerSetup(fd, server, config) {
-    logw('info', "got sigquit with %d connections", server.connections);
+  function workerSetup(fd, id, server, config) {
 
     process.on("SIGQUIT", function() {
+      logw('debug', "received SIGQUIT with %d connections", server.connections);
       // stop accepting
       server.watcher.stop();
 
@@ -154,7 +163,7 @@ function launchServer(config) {
     server.listenFD(fd);
 
     // once application is loaded call the after fork helper
-    if (config.after_fork) { try { config.after_fork(config, posix.getpid(), posix.getppid(), id); } catch(e) { console.error(e); } }
+    if (config.after_fork) { try { config.after_fork(config, posix.getpid(), posix.getppid(), id); } catch(e) { console.error("after_fork(error)"); console.error(e.stack); } }
   }
 
   function runWorker(fd,id) {
@@ -172,7 +181,7 @@ function launchServer(config) {
         }
       }, 1000);
 
-      logw('info', "alive with parent(%d) at %s", posix.getppid(), config.worker_app);
+      logw('debug', "alive with parent(%d) at %s", posix.getppid(), config.worker_app);
 
       if (process.platform != 'darwin') { // setting the process title on Mac is not really safe...
         process.title = "node w[" + id + "]";
@@ -180,12 +189,12 @@ function launchServer(config) {
 
       // load application
       var app = require(config.worker_app);
-      logw('info', "app loaded!");
+      logw('debug', "app loaded!");
       if (typeof(app.run) == 'function') {
-        app.run(config, function(server) { workerSetup(fd, server, config); });
+        app.run(config, function(server) { workerSetup(fd, id, server, config); });
       }
       else if (typeof(app.listenFD) == 'function') {
-        workerSetup(fd, app, config);
+        workerSetup(fd, id, app, config);
       }
       else {
         logw('error', "unable to load app from (%s), must use:\n  'module.exports = app' or 'exports.run = function(config, next) { next(app); };' SIGQUIT %d", config.worker_app, ppid);
@@ -194,6 +203,7 @@ function launchServer(config) {
       }
 
     } catch(e) {
+      console.error("runWorker: %d", id);
       console.error(e);
     }
   }
@@ -208,13 +218,13 @@ function launchServer(config) {
 
   function workerSignals() {
     KILLSIGS.forEach(function(sig) {
-      logw('info', "register (%s)", sig);
+      logw('debug', "register (%s)", sig);
       process.on(sig, function() { logw('info', "received (%s)", this.sig); process.exit(0); }.bind({sig:sig}));
     });
   }
 
   function forkWorker(id) {
-    if (config.before_fork) { try { config.before_fork(config, id); } catch(e) { console.error(e); } }
+    if (config.before_fork) { try { config.before_fork(config, id); } catch(e) { console.error('before_fork'); console.error(e); } }
     var pid = posix.fork();
     if (pid == 0) {
       logw('info', "alive for master(%d)", posix.getppid());
@@ -294,7 +304,7 @@ function launchServer(config) {
 
     argv.shift(); // shift the original node off execve expects argv[0] to be the js file
  
-    if (config.before_exec) { try { config.before_exec(config); } catch(e) { console.error(e); } }
+    if (config.before_exec) { try { config.before_exec(config); } catch(e) { console.error("reexecuteMaster(error)"); console.error(e); } }
 
     if (!pidfile.match(/oldbin$/)) { pidfile += ".oldbin"; } // if we're oldbin already don't change...
     // create a new pidfile for our process
@@ -385,7 +395,7 @@ function launchServer(config) {
 
   function maintainWorkerCount() {
     var off = workers.length - workerProcesses;
-    logm('info', "worker count difference: %d", off);
+    logm('debug', "worker count difference: %d", off);
     if (!off) { return; }
     if (off < 0) { return startMissingWorkers(); }
     workers = workers.filter(function(pid, i) {
@@ -402,7 +412,7 @@ function launchServer(config) {
   }
 
   function startMissingWorkers() {
-    logm('info', "start missing workers");
+    logm('debug', "start missing workers");
     var pid;
     for (var i = 0; i < workerProcesses; ++i) {
       if (workers[i]) { continue; }
@@ -450,7 +460,7 @@ function launchServer(config) {
   if (maintainWorkerCount()) { return; } // child exits
 
   //console.log("master(%d) initializing", posix.getpid());
-  logm('info', "initializing");
+  logm('debug', "initializing master");
   process.title = "node m"
 
   runMaster(workers);
