@@ -1,6 +1,6 @@
 {
   "name" : "tiamat",
-  "version" : "0.2.1",
+  "version" : "0.2.2",
   "description" : "A forking server for node.js",
   "author": "todd (taf2)",
   "contributors": [ ],
